# emopattern

./: .gitignore  README.md  pyproject.toml
diffusion/: README.md  turbo_renderer.py
emodetector/: README.md  app.py  requirements.txt
emodetector/templates/: index.html
emopattern/: app.py  detector.py  emoutils.py  humeutils.py  test.py  viewer.py
emopattern/prompt/: __init__.py  base.py  chatgpt.py  emoprompt.py  emostring.py  mirror.py  newprompt.py  prompts_shuffler.py  shuffle.py  simple.py
emopattern/resources/: emoprompts.yaml  emostrings_short.yaml  mirroring.yaml  mirroring_woimage.yaml  shuffle.yaml  shuffle2.yaml  shuffle3.yaml
emopattern_server/: README.md  RUN_ON_EC2.md  prompt_blender.py  pyproject.toml  turbo_renderer.py
webrtc/: receiver.py  sender.py
