[tool.poetry]
name = "emopattern"
version = "0.1.0"
description = "Closed-loop re-enforcement learning to trigger emotions"
authors = ["Oskar <oskar.maier@gmail.com>"]
readme = "README.md"
packages = [{include = "emopattern"}]

[tool.poetry.dependencies]
python = "~3.10"
lunar-tools = { git = "https://github.com/lunarring/lunar_tools.git", branch = "main" }
opencv-python = "~4.9.0.80"
websockets = "~12.0"
python-dotenv = "~1.0"
zmq = "~0.0"
pyyaml = "~6.0"


[tool.poetry.group.development.dependencies]
black = "~23.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
